<resources>
    <string name="app_name">Restro Smart</string>
    <string name="title_activity_admin_drawer">AdminDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_image">choose image</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="choose_parent_caterory">Choose Parent Category</string>
    <string name="save">SAVE</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="choose_item_category">Choose Item Category</string>
    <string name="enter_normal_price">Enter Normal Price</string>
    <string name="enter_offer_price">Enter Offer Price</string>
    <string name="write_some_description">Write some description</string>
    <string name="honey_chili_potato">Honey Chili Potato</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="menu_name">Menu Name</string>
    <string name="menu_qty">Menu Qty</string>
    <string name="menu_price">Menu Price</string>
    <string name="mobile_no">Mobile No: </string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="water_bottle">Water Bottle</string>

    <string name="Rs">\u20B9</string>
    <string name="remember_me">Remember Me</string>
    <string name="view">View</string>

    <string name="admin_name">Admin Name</string>
    <string name="admin_email">Admin Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="emp_name">Name</string>

    <string name="order_status">Order Status:</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="items">Items</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="message">Message :</string>
    <string name="hint_aadhar_number">Adhar Number</string>
    <string name="hint_email_id">Email Address</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="active_status">Active Status</string>
    <string name="employee_role">Role</string>
    <string name="username">Username</string>
    <string name="sub_total">Sub Total :</string>
    <string name="delivery_fee">Delivery Fee :</string>
    <string name="service_tax_20">+Service Tax(20%) :</string>
    <string name="discount_20">-Discount(20%) :</string>
    <string name="total">Total :</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="user_name">User Name</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="description">Description</string>
    <string name="parent_caterory_name">Parent Category Name</string>
    <string name="action_logout">Logout</string>


    <string-array name="planets_array">
        <item>Veg</item>
        <item>Non Veg</item>
        <item>Liquors</item>
    </string-array>

    <string-array name="button_array">
        <item>OFF</item>
        <item>ON</item>
    </string-array>


    <string name="category_discription">Category Discription</string>

    <string name="menu_discription">Menu Discription</string>
    <string name="enter_menu_name">Enter Menu Name</string>
    <string name="enter_non_ac_rate">Enter Non Ac Rate</string>
    <string name="select_parent_category">Select Parent Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="select_menu">Select Menu</string>
    <string name="offer_name">Offer Name</string>
    <string name="add_menu">Add Menu</string>
    <string name="add_category">Add Category</string>
    <string name="update">Update</string>


    <!--Payment mode dialog-->
    <string name="payment_mode_title">Payment Mode</string>
    <string name="no_data_available">No data Available</string>
    <string name="dots_8942">&#8942;</string>
    <string name="_8942">⋮</string>
    <string name="do_you_want_to_add_water_bottle">do you want to add water bottle?</string>
    <string name="u20b9">₹</string>
    <string name="role">Role</string>

    <string name="gstn_no">GSTN NO</string>
    <string name="no_of_tables">No Of Tables</string>
    <string name="personal_details">Personal Details</string>
    <string name="current_address">Current Address</string>
    <string name="hotel_account_details">Hotel Account Details</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="hotel_timing">Hotel Timing</string>


    <string name="change_password">Change Password</string>
    <string name="help_support">Help &#38; Support</string>
    <string name="user_guide">User Guide</string>
    <string name="terms_conditions">Terms Of Service</string>
    <string name="daily_report">2400</string>

    <string name="slycalendar_singledate" translatable="false">EE, dd MMMM</string>
    <string name="slycalendar_short" translatable="false">EE, dd</string>
    <string name="slycalendar_short_month" translatable="false">EE, dd MMM</string>
    <string name="slycalendar_dates_period" translatable="false">%1$s – %2$s</string>

    <string name="slycalendar_cancel">Cancel</string>
    <string name="slycalendar_save">Save</string>
    <string name="slycalendar_next">Next</string>
    <string name="slycalendar_prev">Prev</string>


    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>


    <string name="cart_empty">Cart Empty</string>
    <string name="cart_price_details">Price Details</string>
    <string name="cart_sub_total">Sub Total (\u20B9)</string>


    <string name="currency">&#8377;</string>
    <string name="something_wrong">Something went wrong. Please try again later.</string>
    <string name="not_available">NA</string>
    <string name="taste_sweet"> (Sweet)</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_qty">1</string>
    <string name="btn_add">add</string>
    <string name="cancel_dialog_content">Are you want to cancel the order or place order later?</string>
    <string name="later">Later</string>
    <string name="not_accepted">(Not Accepted)</string>

    <string-array name="tables_array">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="cannot_upload_file">Cannot upload file</string>
    <string name="selected_pdf_size">Selected pdf size should be less than 1 MB</string>
    <string name="selected_image_size">Selected image size should be less than 1 MB</string>

    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="offer_price">Offer Price</string>
    <string name="edit_rush_hour">Edit Rush Hours</string>
    <string name="add_rush_hours">Add Rush Hours</string>
    <string name="add_scratch_card">Add Scratch Card</string>
    <string name="edit_scratch_card">Edit Scratch Card</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="edit_promo_code">Edit Promo Code</string>
    <string name="add_daily_offer">Add Daily Offer</string>
    <string name="buy_food_count">Buy food count</string>
    <string name="get_food_count">Get food count</string>
    <string name="select_end_greater_start_date">Select end date greater than start date</string>
    <string name="select_first_start_date" >Select first start date</string>
    <string name="daily_offer_details">Daily Offer Details</string>
    <string name="rush_hour_details">Rush Hour Details</string>
    <string name="scratch_card_details">Scratch Card Details</string>
    <string name="edit_daily_offer">Edit Daily Offer</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="veg">Veg</string>
    <string name="novveg">Non Veg</string>
    <string name="liquore">Liqoure</string>
    <string name="new_password">New Password</string>
    <string name="btn_submit">Submit</string>
    <string name="assist_you">How can we assist you?</string>
    <string name="email_id">Email Id</string>
    <string name="name">Name</string>


</resources>
