<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">



        <EditText
            android:id="@+id/et_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/menu_name"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_img_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Image"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_category_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category Name"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_ac_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="AC Rate"
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_non_ac_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Non Ac Rate"
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_hotel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_name"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_branch_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Branch Name"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

  />

</LinearLayout>