<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="3dp"

        >


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

     <!-- <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="3">


            <TextView
                android:id="@+id/tx_menu_nam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/menu_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/tx_menu_qt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/menu_qty"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />





            <TextView
                android:id="@+id/tx_menu_pric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/menu_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>-->
-->
   <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="3">


        <TextView
            android:id="@+id/tx_menu_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"

            android:gravity="start"

            android:text="@string/menu_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        <TextView
            android:id="@+id/tx_menu_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/menu_qty"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />






        <TextView
            android:id="@+id/tx_menu_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="end"
            android:text="@string/menu_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

   </LinearLayout>


    </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>



   <!--</LinearLayout>-->

    <!--<View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear"/>-->






    <!--<android.support.v7.widget.RecyclerView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

    </android.support.v7.widget.RecyclerView>-->


